tests/instantiating/align_negative_value/stderr.golden
error: align property must be positive, current value -10
bus.fbd +2:11
   |
 2 |   align = -10
   |           ^^^
